tests/error/result_errors/result_value_linear.err
Error: Invalid Result (at $FILE:14:18)
   | 
12 | @guppy(module)
13 | def foo(q: qubit) -> None:
14 |     result("foo", q)
   |                   ^ Expression of type `qubit` is not a valid result.

Note: Only numeric values or arrays thereof are allowed as results

Guppy compilation failed due to 1 previous error
